ArrayLists have all been changed to allcreatures. creatures1-4 have been removed